--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
     "module-alias": "^2.2.3",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
-    "swagger-ui-express": "^4.6.3"
+    "sqlite3": "^5.1.6",
+    "swagger-ui-express": "^4.6.3",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
     "@types/chai": "^4.3.5",
-    "@types/multer": "^1.4.7",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mocha": "^10.0.1",
+    "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "chai": "^4.3.7",
