--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "APP_ENV=test mocha -r tsconfig-paths/register -r ts-node/register --spec test/**/*.test.ts"
   },
   "dependencies": {
+    "@obisiket1/express-utils": "^0.0.64",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
