chore: added prettier

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 *.lcov
-
+src/database/*.test.*
 # nyc __test__ coverage
 .nyc_output
 
