fix: fixed errors when testing the post endpoint

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 APP_ENV=development
 APP_SECRET=secret
 
-DB=dispatcher
-TEST_DB=dispatcher_test
+DB=dispatcher.sqlite
+TEST_DB=dispatcher.test.sqlite
